# GC_miniZAM

./: CMakeLists.txt  README.md
minizam-full/: run_tests.pl
minizam-full/src/: GC_miniZAM  Makefile  config.h  domain.c  domain_state.h  fifo.c  fifo.h  gc.c  gc.h  interp.c  interp.h  lists.c  lists.h  minizam.c  mlvalues.c  mlvalues.h  parser.c  primitives.c
minizam-full/tests/bench/: list_1.txt  list_3.txt
minizam-full/tests/n-ary_funs/: grab2_eval  grab3_eval  grab4.txt  grab4_eval
minizam-full/tests/perso/: sum_3.txt
minizam-full/tests/rec_funs/: facto_eval  fibo.ml
